syntax = "proto3";

package kaiwa;

option go_package ="./chatpb";

import "message.proto";

message ChatRequest {
    Chat chat_details = 1;
    string token = 2;
}

message ChatResponse {
    Chat chat_details = 1;
    string status = 4;
}

message GetChatResponse {
    repeated Chat chat_details = 1;
}

service ChatService {
    rpc SendMessage(ChatRequest) returns (ChatResponse) {}
    rpc GetMessage(User) returns (GetChatResponse) {}
}